# opti-browser-tool

./: .gitignore  FILE_INVENTORY.tsv  LICENSE  MANIFEST.sha256  Makefile  NOTICE.md  PROGRAM.md  PROJECT_CHARTER.md  README.md  RECOVERY_MANIFEST.md
docs/: AGENT_HANDOFF.md  AUTO_RESEARCH_HARDENING_HANDOUT.md  AUTO_RESEARCH_IMPLEMENTATION_LEDGER.md  AUTO_RESEARCH_OPERATOR_RUNBOOK.md  AUTO_RESEARCH_READINESS_EXECUTION.md  AUTO_RESEARCH_REVIEW_PROMPT.md  BRINGUP_RUNBOOK.md  DECISION_PROCESS.md  DECISION_REGISTER.md  DECISION_TIMELINE.md  OPEN_QUESTIONS.md  PRE_RESEARCH_WORKSTREAMS.md  PRODUCTION_ACTIVATION_HANDOVER_PROMPT.md  README.md  REFERENCES.md  REVIEW_GUIDE.md  ROADMAP.md  TASK_DATA_GUIDE.md  WARC_ONLINE4_QUALIFICATION.md
eval_harness/: README.md  pyproject.toml
eval_harness/examples/: fixture_bridge.py
eval_harness/src/opti_eval/: __init__.py  admissions.py  catalog.py  cli.py  doctor.py  errors.py  identity.py  models.py  paths.py  runner.py  summary.py  util.py  validation.py  warc_online4_runtime.py
eval_harness/src/opti_eval/adapters/: __init__.py  base.py  command.py  fixture.py  registry.py  warc_online4.py
eval_harness/tests/: test_command_adapter.py  test_evidence_contract_corpus.py  test_fixture_runner.py  test_identity.py  test_repository_validation.py  test_summary_replay.py  test_warc_online4.py
evals/: config.example.json  warc-online4.production.template.json
examples/: experiment.example.json  task.example.json
harness/: README.md
judge_harness/: README.md  pyproject.toml
judge_harness/src/opti_judge/: __init__.py  cli.py  corpus.py  evidence.py  llm.py  panel.py  probekit.py  quarantine.py  router.py  t1_checks.py
judge_harness/tests/: test_judges.py  test_quarantine_state.py
loop_harness/: README.md  pyproject.toml
loop_harness/src/opti_loop/: __init__.py  analyst.py  attribution.py  campaign.py  cli.py  clusters.py  compare.py  conductor.py  eligibility.py  evaluate.py  fileguard.py  gates.py  gitutil.py  learning.py  ledger.py  lint.py  manifest.py  materialization.py  operation.py  packet.py  protocol.py  registration.py  repeated.py  store.py  transfer.py  verdict.py
loop_harness/tests/: test_cli.py  test_e2e_loop.py  test_evidence_eligibility.py  test_manifest_contract.py  test_materialization.py  test_repeated.py  test_units.py
research/: README.md
schemas/: experiment.schema.json  result.schema.json  task.schema.json  (+1 more)
(+272 files in other folders)
