[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "opti-browser-eval"
version = "0.1.0"
description = "Backend-neutral runner for the Opti Browser Tool evaluation suite"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Opti Browser Tool project"}]
dependencies = []

[project.scripts]
opti-eval = "opti_eval.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
