[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "opti-judge"
version = "0.1.0"
description = "Provisional evaluation-plane judge instrumentation for opti-browser-tool (implements the Proposed ADR-0016 layering; does not accept it)"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
opti-judge = "opti_judge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
