[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "opti-judge"
version = "0.1.0"
description = "Evaluation-plane judge instrumentation for opti-browser-tool"
requires-python = ">=3.11"
dependencies = ["opti-browser-eval==0.1.0"]

[project.scripts]
opti-judge = "opti_judge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
