[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "opti-loop"
version = "0.1.0"
description = "Provisional auto-research loop conductor for opti-browser-tool (implements the Proposed ADR-0015 architecture; does not accept it)"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
opti-loop = "opti_loop.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
