[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "opti-loop"
version = "0.1.0"
description = "Auto-research loop conductor for opti-browser-tool"
requires-python = ">=3.11"
dependencies = [
  "opti-browser-eval==0.1.0",
  "opti-judge==0.1.0",
]

[project.scripts]
opti-loop = "opti_loop.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
